--- a/about.html
+++ b/about.html
@@ -11,9 +11,9 @@
      <header>
     <div class="logo">JFORE</div>
     <nav>
-      <a href="index.php">Home</a>
-      <a href="services.php">Services</a>
-      <a href="contact.php">Contact</a>
+      <a href="index.html">Home</a>
+      <a href="services.html">Services</a>
+      <a href="contact.html">Contact</a>
     </nav>
   </header>
     <h1>About Us</h1>
