Update and rename contact.php to contact.html

--- a/contact.html
+++ b/contact.html
@@ -11,9 +11,9 @@
   <header style="position: fixed; top: 0; width: 100%; z-index: 1000; left: 0;">
     <div class="logo">JFORE</div>
     <nav>
-      <a href="index.php">Home</a>
-      <a href="about.php">About</a>
-      <a href="services.php">Services</a>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="services.html">Services</a>
     </nav>
   </header><br><br><br><br>
 
