Update and rename services.php to services.html

--- a/services.html
+++ b/services.html
@@ -11,9 +11,9 @@
     <header>
     <div class="logo">JFORE</div>
     <nav>
-      <a href="index.php">Home</a>
-      <a href="about.php">About</a>
-      <a href="contact.php">Contact</a>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="contact.html">Contact</a>
     </nav>
   </header>
 
