--- a/services.html
+++ b/services.html
@@ -22,7 +22,7 @@
     <div class="overlay">
       <div class="text-content">
         <p class="intro">
-          At JOJAM STRUCTIFY, we specialize in creating innovative engineering solutions that stand the test of time. Our expertise ensures your projects are built on a foundation of quality and reliability.
+          At JFORE STRUCTIFY, we specialize in creating innovative engineering solutions that stand the test of time. Our expertise ensures your projects are built on a foundation of quality and reliability.
         </p>
         <h1>Engineering<br>Solutions That Last</h1>
         <button><a href="contact.html" style="text-decoration: none;color:white;">Contact Us</a></button>
