--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <header>
     <div class="logo">JFORE</div>
     <nav>
-      <a href="about.html">About</a>
-      <a href="services.html">Services</a>
-      <a href="contact.html">Contact</a>
+      <li><a href="about.html">About</a></li>
+      <li><a href="services.html">Services</a></li>
+      <li><a href="contact.html">Contact</a></li>
     </nav>
   </header>
 
