--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <header>
     <div class="logo">JFORE</div>
     <nav>
-      <li style="list-style-type: none;"><a href="about.html">About</a></li>
-      <li style="list-style-type: none;"><a href="services.html">Services</a></li>
+      <a href="about.html">About</a>
+      <a href="services.html">Services</a>
       <li style="list-style-type: none;"><a href="contact.html">Contact</a></li>
     </nav>
   </header>
