--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav>
       <a href="about.html">About</a>
       <a href="services.html">Services</a>
-      <li style="list-style-type: none;"><a href="contact.html">Contact</a></li>
+      <a href="contact.html">Contact</a>
     </nav>
   </header>
 
