--- a/services.html
+++ b/services.html
@@ -16,20 +16,42 @@
       <a href="contact.html">Contact</a>
     </nav>
   </header>
-
-
-  <section class="services-hero">
+<section class="services-hero">
     <div class="overlay">
       <div class="text-content">
         <p class="intro">
-          At JFORE STRUCTIFY, we specialize in creating innovative engineering solutions that stand the test of time. Our expertise ensures your projects are built on a foundation of quality and reliability.
+          At JOJAM STRUCTIFY, we specialize in creating innovative engineering solutions that stand the test of time. Our expertise ensures your projects are built on a foundation of quality and reliability.
         </p>
         <h1>Engineering<br>Solutions That Last</h1>
         <button><a href="contact.html" style="text-decoration: none;color:white;">Contact Us</a></button>
       </div>
     </div>
   </section>
-
+  <section class="offer-section">
+    <h2>What We Offer</h2>
+    <div class="offer-cards">
+      <div class="card">
+        <h3>Building Works</h3>
+        <p>Construction of commercial, residential, and institutional buildings with high standards and structural integrity.</p>
+      </div>
+      <div class="card">
+        <h3>Civil Works</h3>
+        <p>Infrastructure development including roads, bridges, drainage, and public facilities.</p>
+      </div>
+      <div class="card">
+        <h3>Irrigation Works</h3>
+        <p>Design and installation of efficient irrigation systems for agricultural and commercial needs.</p>
+      </div>
+      <div class="card">
+        <h3>Water Pumps</h3>
+        <p>Installation and maintenance of borehole and surface water pumping systems.</p>
+      </div>
+      <div class="card">
+        <h3>Solar Works</h3>
+        <p>Supply, installation, and servicing of solar power systems for sustainable energy solutions.</p>
+      </div>
+    </div>
+  </section>
   <footer id="contact">
     <p><strong>Location:</strong> Madaba, Ruvuma, Tanzania</p>
     <p><strong>Phone:</strong> +255 749 684 552</p>
