--- a/services.html
+++ b/services.html
@@ -44,7 +44,8 @@
       </div>
       <div class="card">
         <h3>Water Pumps</h3>
-        <p>Installation and maintenance of borehole and surface water pumping systems.</p>
+        <p>Installation and maintenance of borehole and surface water pumping systems.
+          Design and implementation of robust water supply networks to ensure clean, safe, and sustainable water access.</p>
       </div>
       <div class="card">
         <h3>Solar Works</h3>
