--- a/about.html
+++ b/about.html
@@ -1,14 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="About JFORE Construction - Engineering company focused on infrastructure, sustainability, and client success.">
   <title>About - JFORE Construction</title>
-  <link rel="stylesheet" href="about-style.css">
+  
+  <!-- Stylesheets -->
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="about-style.css">
+  <link rel="stylesheet" href="read-style.css">
+
+  <!-- Font Awesome for social icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
+
+  <!-- Font override -->
+  <style>
+    body {
+      font-family: 'Courier New', Courier, monospace;
+    }
+  </style>
 </head>
+
 <body>
-     <header>
+  <header>
     <div class="logo">JFORE</div>
     <nav>
       <a href="index.html">Home</a>
@@ -16,9 +31,10 @@
       <a href="contact.html">Contact</a>
     </nav>
   </header>
-    <h1>About Us</h1>
 
   <main>
+    <h1>About Us</h1>
+
     <section class="about-section">
       <h2>Client-Centric Approach</h2>
       <p>
@@ -34,11 +50,27 @@
         needs of our clients across various industries.
       </p>
     </section>
+
+    <div class="btn-container">
+      <a href="aboutreadmore.html" class="readmore-btn">Readmore</a>
+    </div>
   </main>
 
   <footer>
     <p>&copy; 2025 JFORE Construction. All rights reserved.</p>
-    <p><a href="https://kireri2803.github.io/ericknyakireri/contact.html" style="text-decoration: none;color:white;">Published by ERICK NYAKIRERI | Coded by Nyakireri</a></p>
+    <p>
+      <a href="https://kireri2803.github.io/ericknyakireri/contact.html" style="text-decoration: none; color: white;">
+        Published by ERICK NYAKIRERI | Coded by Nyakireri
+      </a>
+    </p>
+
+    <div class="social-links">
+      <a href="https://facebook.com/jfore" target="_blank"><i class="fab fa-facebook"></i></a>
+      <a href="https://wa.me/255749684552" target="_blank"><i class="fab fa-whatsapp"></i></a>
+      <a href="https://instagram.com/jfore" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://t.me/jfore" target="_blank"><i class="fab fa-telegram"></i></a>
+      <a href="https://tiktok.com/@jfore" target="_blank"><i class="fab fa-tiktok"></i></a>
+    </div>
   </footer>
 
   <script src="about-script.js"></script>
