--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,19 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Contact - JFORE Construction</title>
+
+  <!-- External CSS -->
   <link rel="stylesheet" href="contact-style.css" />
   <link rel="stylesheet" href="style.css" />
+
+  <!-- Internal font override -->
+  <style>
+    * {
+      font-family: 'Courier New', Courier, monospace;
+    }
+  </style>
 </head>
+
 <body>
   <header style="position: fixed; top: 0; width: 100%; z-index: 1000; left: 0;">
     <div class="logo">JFORE</div>
@@ -15,7 +25,9 @@
       <a href="about.html">About</a>
       <a href="services.html">Services</a>
     </nav>
-  </header><br><br><br><br>
+  </header>
+
+  <br><br><br><br>
 
   <div class="container">
     <h1>Contact JFORE</h1>
@@ -34,6 +46,10 @@
         <p><strong>Location:</strong> Madaba, Ruvuma</p>
         <p><strong>Phone:</strong> +255 749 684 552</p>
         <p><strong>Email:</strong> info@jfore.co.tz</p>
+        <h3>Operational Hours</h3>
+        <p><strong>Monday to Friday:</strong> 8:00 AM – 6:00 PM</p>
+        <p><strong>Saturday:</strong> 9:00 AM – 1:00 PM</p>
+        <p><strong>Sunday:</strong> Closed</p>
       </div>
     </div>
   </div>
