--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>JFORE Construction</title>
   <link rel="stylesheet" href="style.css" />
+  <!-- Font Awesome for icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
 </head>
+
 <body>
   <header>
     <div class="logo">JFORE</div>
@@ -21,7 +24,10 @@
     <div class="hero-text">
       <h1>Strategy in Construction</h1>
       <p>Discover how JFORE is transforming infrastructure in Ruvuma and beyond. Building a better tomorrow starts today.</p>
-      <button><a href="https://youtu.be/mbwuj58UEPg" style="text-decoration: none;color:white;">Watch now</button>
+      <div class="hero-buttons">
+        <a class="btn" href="https://youtu.be/mbwuj58UEPg" target="_blank">Watch now</a>
+        <a class="btn" href="readmore.html">Readmore</a>
+      </div>
     </div>
   </section>
 
@@ -30,7 +36,18 @@
     <p><strong>Phone:</strong> +255 749 684 552</p>
     <p><strong>Email:</strong> info@jfore.co.tz</p>
     <p>&copy; 2025 JFORE Construction. All rights reserved.</p>
-    <p><a href="https://kireri2803.github.io/ericknyakireri/contact.html" style="text-decoration: none;color:white;">Published by ERICK NYAKIRERI | Coded by Nyakireri</a></p>
+    <p>
+      <a href="https://kireri2803.github.io/ericknyakireri/contact.html" style="text-decoration: none; color: white;">
+        Published by ERICK NYAKIRERI | Coded by Nyakireri
+      </a>
+    </p>
+    <div class="social-links">
+      <a href="https://facebook.com/jfore" target="_blank"><i class="fab fa-facebook"></i></a>
+      <a href="https://wa.me/255749684552" target="_blank"><i class="fab fa-whatsapp"></i></a>
+      <a href="https://instagram.com/jfore" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://t.me/jfore" target="_blank"><i class="fab fa-telegram"></i></a>
+      <a href="https://tiktok.com/@jfore" target="_blank"><i class="fab fa-tiktok"></i></a>
+    </div>
   </footer>
 
   <script src="script.js"></script>
