--- a/services.html
+++ b/services.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Services - JFORE Construction</title>
-  <link rel="stylesheet" href="services-style.css">
+
+  <!-- CSS Files -->
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="services-style.css">
+
+  <!-- Font Awesome for social media icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
 </head>
+
 <body>
-    <header>
+  <header>
     <div class="logo">JFORE</div>
     <nav>
       <a href="index.html">Home</a>
@@ -16,17 +22,20 @@
       <a href="contact.html">Contact</a>
     </nav>
   </header>
-<section class="services-hero">
+
+  <section class="services-hero">
     <div class="overlay">
       <div class="text-content">
         <p class="intro">
-          At JOJAM STRUCTIFY, we specialize in creating innovative engineering solutions that stand the test of time. Our expertise ensures your projects are built on a foundation of quality and reliability.
+          At JFORE STRUCTIFY, we specialize in creating innovative engineering solutions that stand the test of time. 
+          Our expertise ensures your projects are built on a foundation of quality and reliability.
         </p>
         <h1>Engineering<br>Solutions That Last</h1>
-        <button><a href="contact.html" style="text-decoration: none;color:white;">Contact Us</a></button>
+        <a href="contact.html" class="btn">Contact Us</a>
       </div>
     </div>
   </section>
+
   <section class="offer-section">
     <h2>What We Offer</h2>
     <div class="offer-cards">
@@ -45,7 +54,8 @@
       <div class="card">
         <h3>Water Pumps</h3>
         <p>Installation and maintenance of borehole and surface water pumping systems.
-          Design and implementation of robust water supply networks to ensure clean, safe, and sustainable water access.</p>
+        Design and implementation of robust water supply networks to ensure clean, safe, and sustainable water access.
+        </p>
       </div>
       <div class="card">
         <h3>Solar Works</h3>
@@ -53,12 +63,24 @@
       </div>
     </div>
   </section>
+
   <footer id="contact">
     <p><strong>Location:</strong> Madaba, Ruvuma, Tanzania</p>
     <p><strong>Phone:</strong> +255 749 684 552</p>
     <p><strong>Email:</strong> info@jfore.co.tz</p>
     <p>&copy; 2025 JFORE Construction. All rights reserved.</p>
-    <p><a href="https://kireri2803.github.io/ericknyakireri/contact.html" style="text-decoration: none;color:white;">Published by ERICK NYAKIRERI | Coded by Nyakireri</a></p>
+    <p>
+      <a href="https://kireri2803.github.io/ericknyakireri/contact.html" style="text-decoration: none; color: white;">
+        Published by ERICK NYAKIRERI | Coded by Nyakireri
+      </a>
+    </p>
+    <div class="social-links">
+      <a href="https://facebook.com/jfore" target="_blank"><i class="fab fa-facebook"></i></a>
+      <a href="https://wa.me/255749684552" target="_blank"><i class="fab fa-whatsapp"></i></a>
+      <a href="https://instagram.com/jfore" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://t.me/jfore" target="_blank"><i class="fab fa-telegram"></i></a>
+      <a href="https://tiktok.com/@jfore" target="_blank"><i class="fab fa-tiktok"></i></a>
+    </div>
   </footer>
 
   <script src="services-script.js"></script>
